add crud for adding restaurant, menus, and dishes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+
+    <% if @error.present? %>
+      <div class="error"><%= @error %></div>
+      <hr>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
